# dependabot-multi-managers

./: pyproject.toml  requirements.txt
.github/: dependabot.yml
